add: swag get
